# ws_elfin_cpp

./: .gitignore  README.md
src/berry_to_elfin/: package.xml  setup.cfg  setup.py
src/berry_to_elfin/berry_to_elfin/: yolo_to_elfin.py
src/berry_to_elfin/launch/: yolo_to_elfin.launch.py
src/elfin_moveit_app/: CMakeLists.txt  package.xml
src/elfin_moveit_app/launch/: elfin_go_to_pose.launch.py
src/elfin_moveit_app/src/: elfin_moveit_app.cpp
